# just-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
just_rag/: base_rag.py  citation.py  cited_classic_rag.py  classic_rag.py  llm_factory.py
just_rag/document_loader/universal_loader/: loader.py  markdown_loader.py  website_loader.py
just_rag/self_rag/: decision_has_hallucination.py  graph_builder.py  node_retreiver.py
just_rag/universal_loader/: __init__.py  pdf_loader.py  universal_document_loader.py  universal_loader.py  unstructured_file_loader.py
just_rag/utils/: format_document.py
just_rag/vector_store/: __init__.py  base_vector_store_builder.py  chromadb_embedding_builder.py  just_chroma_vector_store_builder.py  retriever_builder.py
rag_compare/: __init__.py  cited_classic_rag.py  classic_rag.py  simple_citation_rag.py  simple_rag.py
rag_compare/langgraph_self_rag/: decision_generate.py  decision_has_hallucination.py  decision_retry.py  graph_builder.py  graph_state.py  node_generate.py  node_grade_documents.py  node_increase_retry.py  node_retreiver.py  node_transform_query.py
rag_compare/self_rag/: __init__.py  decision_generate.py  decision_has_hallucination.py  graph_state.py  node_generate.py  node_grade_documents.py  node_increase_retry.py  node_transform_query.py
rag_compare/utils/: format_document.py
tests/: test_citation_simple_rag.py  test_cited_classic_rag.py  test_classic_rag.py  test_main.py  test_self_rag.py  test_simple_rag.py
tests/assets/: Charte canadienne des droits et libertés.html  sample.html  sample.mdx
tests/llm/: __init__.py  local_llm.py  openai_llm.py
tests/test_functional/: simple_huggingface_chroma_vector_store_builder.py  test_classic_rag.py  test_functional_cited_classic_rag.py  test_functional_full_stack_rag.py  test_functional_universal_loader.py  test_universal_loader.py  utils.py
tests/test_unit/: test_cited_classic_rag.py
tests/test_unit/universal_loader/: test_markdown_loader.py  test_pdf_loader.py  test_universal_loader.py  test_website_loader.py
tests/test_unit/utils/: test_format_document.py
tests/universal_loader/: test_universal_loader.py
