[tool.poetry]
name = "just-rag"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "<=3.12.4,>=3.10"
langchain = "^0.2.7"
langgraph = "^0.1.8"
chromadb = "^0.5.4"
langchain-openai = "^0.1.16"
langchain-anthropic = "^0.1.20"
langchain-community = "^0.2.7"
wikipedia = "^1.4.0"
python-dotenv = "^1.0.1"
langchain-llamacpp-chat-model = "0.2.2"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.23.7"

[[tool.poetry.source]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal"
priority = 'secondary'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
